# Scanner

./: .gitignore  README.md  index.html  package-lock.json  package.json
docs/: architecture.md  dev-notes.md  how-to-run-windows.md
samples/: f250_session.json
src/: App.tsx  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: app_state.rs  commands.rs  logger.rs  main.rs  runtime.rs  scanner.rs
src-tauri/src/discovery/: mod.rs
src-tauri/src/protocol/: isotp.rs  uds.rs
src-tauri/src/simulation/: mod.rs
src-tauri/src/topology/: mod.rs
src-tauri/src/transport/: direct.rs  j2534.rs  mod.rs  sim.rs  types.rs
src/components/: DtcList.tsx  LogsDrawer.tsx  ModuleWorkspace.tsx  TopologyTree.tsx  ui.tsx
src/state/: types.ts  useAppState.ts
