[package]
name = "vyntool"
version = "0.1.0"
edition = "2021"

[dependencies]
tauri = { version = "1.6", features = ["api-all"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
parking_lot = "0.12"
libloading = "0.8"

[build-dependencies]
tauri-build = { version = "1.6" }
